# credentials

./: .gitignore  .travis.yml  Makefile  README.md  credentials.cabal  stack-7.10.3.yaml  stack-8.0.1.yaml  stack.yaml
credentials/: CHANGELOG.md  README.md  credentials.cabal
credentials-cli/: README.md  credentials-cli.cabal
credentials-cli/src/: Main.hs
credentials-cli/src/Credentials/: IO.hs  Types.hs
credentials-cli/src/Credentials/Admin/: IO.hs  Types.hs
credentials-cli/src/Credentials/CLI/: Emit.hs  Format.hs  IO.hs  Options.hs  Protocol.hs  Store.hs  Types.hs
credentials-cli/src/Credentials/CLI/Types/: Protocol.hs
credentials-dynamodb/: README.md  credentials-dynamodb.cabal
credentials-dynamodb/src/Credentials/: DynamoDB.hs
credentials-dynamodb/src/Credentials/DynamoDB/: Item.hs  Val.hs
credentials-s3/: README.md  credentials-s3.cabal
credentials-s3/src/Credentials/: S3.hs
credentials/src/: Credentials.hs
credentials/src/Credentials/: DynamoDB.hs  KMS.hs  S3.hs  Secret.hs  Types.hs
credentials/src/Credentials/DynamoDB/: Item.hs
credentials/src/Credentials/Store/: Dynamo.hs  S3.hs
credentials/src/Network/: Credentials.hs
credentials/src/Network/Credentials/: Secret.hs  Store.hs  Types.hs
credentials/src/Network/Credentials/Store/: Dynamo.hs  S3.hs
credentials/test/: Main.hs
script/: dynamo-local.sh  dynamo-test  dynamo-test.sh  travis-documentation
share/: completion.bash
src/Network/: Credentials.hs
test/: Main.hs
