name:                  credentials
version:               0.0.0
synopsis:              Credentials Storage and Retrieval
homepage:              https://github.com/brendanhay/credentials
license:               Apache-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013-2015 Brendan Hay
category:              Network, AWS, Cloud, Security
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >= 1.10

description:
    Pending

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    ghc-options:       -Wall

    exposed-modules:

    other-modules:

    build-depends:
          amazonka     == 1.0.0.*
        , base         >= 4.7     && < 5

executable credentials
    default-language:  Haskell2010
    hs-source-dirs:    bin
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    other-modules:

    build-depends:
          base
        , credentials

test-suite tests
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    other-modules:

    build-depends:
          base
        , credentials
