name:                  credentials-cli
version:               0.0.1.1
synopsis:              Secure Credentials Administration
homepage:              https://github.com/brendanhay/credentials
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015-2016 Brendan Hay
category:              Network, AWS, Security, Console
build-type:            Simple
cabal-version:         >= 1.10

description:
    @credentials@ is a console application used to administer secure credentials
    via the <http://hackage.haskell.org/package/credentials credentials> library of the same name.
    .
    You can read more about use-cases and prerequisites <https://github.com/brendanhay/credentials here>.

source-repository head
    type:     git
    location: git://github.com/brendanhay/credentials.git

executable credentials
    default-language:  Haskell2010
    hs-source-dirs:    src
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    other-modules:
          Credentials.CLI.Format
        , Credentials.CLI.IO
        , Credentials.CLI.Options
        , Credentials.CLI.Types
        , Credentials.CLI.Types.Protocol

    build-depends:
          aeson                >= 0.8
        , aeson-pretty         >= 0.7.2
        , amazonka             >= 1.3.7
        , amazonka-core        >= 1.3.7
        , amazonka-dynamodb    >= 1.3.6
        , attoparsec           >= 0.11
        , base                 >= 4.7 && < 5
        , bytestring           >= 0.10
        , conduit              >= 1.2
        , conduit-extra        >= 1.1
        , cryptonite           >= 0.10
        , credentials          >= 0.0.1 && < 0.1
        , exceptions           >= 0.6
        , lens                 >= 4.4
        , mmorph               >= 1
        , mtl                  >= 2.2.1
        , optparse-applicative >= 0.12
        , resourcet            >= 1.1
        , text                 >= 0.11
        , transformers-base    >= 0.4
        , unordered-containers >= 0.2.5
        , uri-bytestring       >= 0.2.1