name:                  credentials-dynamodb
version:               0.0.0
synopsis:              Credentials Storage and Retrieval
homepage:              https://github.com/brendanhay/credentials
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015 Brendan Hay
category:              Network, AWS, Cloud, Security
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >= 1.10

description:
    Pending

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    ghc-options:       -Wall

    exposed-modules:
          Credentials.DynamoDB

    other-modules:
          Credentials.DynamoDB.Val

    build-depends:
          amazonka             >= 1.0.1
        , amazonka-dynamodb    >= 1.0.1
        , base
        , bytestring
        , conduit
        , credentials
        , exceptions
        , lens
        , retry
        , semigroups
        , text
        , transformers
        , unordered-containers