name:                  credentials-dynamodb
version:               0.0.1
synopsis:              Secure Credentials DynamoDB Storage
homepage:              https://github.com/brendanhay/credentials
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015 Brendan Hay
category:              Network, AWS, Cloud, Security
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >= 1.10

description:
    This library provides a DynamoDB storage backend for the
    <http://hackage.haskell.org/package/credentials credentials> library.

    DynamoDB offers highly-available storage with good latency characteristics,
    for file sizes of 200KB or less.

source-repository head
    type:     git
    location: git://github.com/brendanhay/credentials.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    ghc-options:       -Wall

    exposed-modules:
          Credentials.DynamoDB

    other-modules:
          Credentials.DynamoDB.Item

    build-depends:
          amazonka             >= 1.3.1
        , amazonka-dynamodb    >= 1.3.1
        , base
        , bytestring
        , conduit
        , credentials
        , time
        , memory
        , cryptonite
        , exceptions
        , lens
        , retry
        , semigroups
        , text
        , transformers
        , unordered-containers