name:                  credentials-s3
version:               0.0.1
synopsis:              Secure Credentials S3 Storage
homepage:              https://github.com/brendanhay/credentials
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015 Brendan Hay
category:              Network, AWS, Cloud, Security
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >= 1.10

description:
    This library provides a S3 storage backend for the
    <http://hackage.haskell.org/package/credentials credentials> library.

    S3 offers highly-available storage for large file sizes for latency
    insensitive applications.

source-repository head
    type:     git
    location: git://github.com/brendanhay/credentials.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    ghc-options:       -Wall

    exposed-modules:
          Credentials.S3

    other-modules:

    build-depends:
          amazonka    >= 1.2
        , amazonka-s3 >= 1.2
        , base
        , bytestring
        , conduit
        , credentials
        , exceptions
        , lens
        , text
        , transformers
