name:                  credentials
version:               0.0.0
synopsis:              Credentials Storage and Retrieval
homepage:              https://github.com/brendanhay/credentials
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013-2015 Brendan Hay
category:              Network, AWS, Cloud, Security
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >= 1.10

description:
    Pending

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    ghc-options:       -Wall

    exposed-modules:
          Credentials

    other-modules:
          Credentials.Secret
        , Credentials.Types

    build-depends:
          amazonka             >= 1.0.1
        , amazonka-core        >= 1.0.1
        , amazonka-kms         >= 1.0.1
        , base
        , bytestring
        , cryptonite
        , exceptions           >= 0.6
        , lens
        , memory
        , semigroups
        , text
        , unordered-containers >= 0.2.5

test-suite tests
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    other-modules:

    build-depends:
          base
        , credentials
