name:                  credentials
version:               0.0.1
synopsis:              Secure Credentials Storage and Distribution
homepage:              https://github.com/brendanhay/credentials
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015-2016 Brendan Hay
category:              Network, AWS, Security
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >= 1.10

description:
    This library provides a unified interface for managing secure, shared credentials.

    It uses Amazon Key Management Service (KMS) for master-keys and then locally
    encrypts and decrypts secrets, which are then stored in any of the supported
    storage backends.

    The use-case is to avoid storing sensitive information such as passwords and
    connection strings in plaintext in places such as source control or on
    developers' machines. Instead you can securely administer and distribute
    secrets, leveraging Amazon's IAM policies for access control and permissions to
    ensure limited read-only permissions from production/deployed hosts.

    You can embed this library into projects such as web applications to securely
    retrieve sensitive information such as database passwords or private keys on startup.

    The different storage backends (such as DynamoDB or redis) allow you to choose
    storage based on latency, availability, or sensitivity requirements.

source-repository head
    type:     git
    location: git://github.com/brendanhay/credentials.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    ghc-options:       -Wall

    exposed-modules:
          Credentials
        , Credentials.KMS
        , Credentials.DynamoDB

    other-modules:
          Credentials.DynamoDB.Item
        , Credentials.Types

    build-depends:
          aeson
        , amazonka             >= 1.3.7
        , amazonka-core        >= 1.3.7
        , amazonka-dynamodb    >= 1.3.7
        , amazonka-kms         >= 1.3.7
        , base
        , bytestring
        , conduit
        , cryptonite
        , exceptions           >= 0.6
        , lens
        , memory
        , retry
        , semigroups
        , text
        , time
        , transformers
        , unordered-containers >= 0.2.5
        , resourcet

test-suite tests
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    other-modules:

    build-depends:
          base
        , credentials
